<resources>
    <string name="app_name">Take-a-note</string>
    <string name="userid_hint">Enter your userid</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="gmail_hint">Enter your email</string>
    <string name="login_text">SIGN IN</string>
    <string name="register_text">REGISTER</string>
    <string name="LOGIN_PREFS">anitapau.uw.tacoma.take_a_note.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="newNote">New</string>
    <string name="take_note_hint">Write a note</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Share                                                                                                                                                 ,,</string>
    <string name="write_Note">Write a note</string>
    <string name="NameOfNote">Name Of File</string>
    <string name="title_activity_web_login">Take-a-note</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LOGIN_FILE">edu.tacoma.uw.ahanag22.take_a_note_on_android.LOGIN_FILE</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
