<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.tacoma.uw.ahanag22.take_a_note_on_android.RegisterActivity">

<EditText
    android:id="@+id/user_edit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:hint="@string/userid_hint"
    android:layout_above="@+id/passwd_edit"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="53dp" />

<EditText
    android:id="@+id/passwd_edit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="@string/pwd_hint"
    android:layout_marginBottom="59dp"
    android:layout_above="@+id/gmail_edit"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />
<EditText
    android:id="@+id/gmail_edit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textWebEmailAddress"
    android:hint="@string/gmail_hint"
    android:layout_above="@+id/login_button"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="17dp" />
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/login_button"
    android:layout_gravity="end"
    android:text="@string/register_text"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="152dp" />

</RelativeLayout>
